# RALF

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  eval.py  eval_unanno.py  pyproject.toml
configs/autoreg_cgl/: c.sh  chw.sh  partial.sh  refinement.sh  relation.sh  uncond.sh
configs/autoreg_pku/: c.sh  chw.sh  partial.sh  refinement.sh  relation.sh  uncond.sh
configs/cglgan_cgl/: c.sh  chw.sh  partial.sh  uncond.sh
configs/cglgan_pku/: chw.sh  partial.sh
configs/cglgan_ra_cgl/: refinement.sh  uncond.sh
configs/cglgan_ra_pku/: c.sh  refinement.sh  uncond.sh
configs/dsgan_cgl/: uncond.sh
configs/dsgan_pku/: uncond.sh
configs/maskgit_pku/: uncond.sh
configs/ralf_cgl/: chw.sh  refinement.sh  relation.sh  uncond.sh
configs/ralf_pku/: c.sh  chw.sh  partial.sh  refinement.sh  relation.sh
data_splits/splits/cgl/: val.txt  (+3 more)
image2layout/hfds_builder/: dump_dataset.py  inpainting.py  saliency_detection.py
image2layout/preprocess/: build_retrieval_indexes.py  build_retrieval_indexes_LPIPS.py  build_retrieval_indexes_cross_dataset.py  precompute_relationship.py  rerank_indexes.py  save_clustering_coordinates.py
image2layout/train/: data.py  global_variables.py  inference.py  inference_single_data.py  inference_unanno.py  train.py
scripts/docker/: build.sh  exec.sh
scripts/eval_inference/: eval_inference.sh  eval_inference_all.sh  eval_inference_unanno.sh  eval_inference_unanno_all.sh
scripts/run_job/: end_to_end.sh  eval_inference.sh  eval_inference_unanno.sh  inference_single_data.sh  train.sh  visualize_retrieval.sh
scripts/train/: autoreg_cgl.sh  ralf_cgl.sh
tests/: util.py
tests/train/: test_data.py
(+126 files in other folders)
