[tool.poetry]
name = "image2layout"
version = "0.1.0"
description = "Image2layout"
authors = ["Dummy User <dummy@gmail.com>"]
packages = [
    { include = "image2layout", from = ".", format="sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
datasets = "^2.13.0"
protobuf = "<=3.20.3"
gcsfs = "^2023.1.0"
pillow = "^9.5.0"
setuptools = "^68.0.0"
tensorboard = "^2.13.0"
omegaconf = "^2.3.0"
einops = "^0.6.1"
scipy = "<=1.10.1"
seaborn = "^0.12.2"
tensorflow = "^2.12.0"
tensorflow-datasets = "^4.9.2"
hydra-core = "^1.3.2"
opencv-python = "^4.8.0.74"
torch = {version = "1.13.1", source = "torch_cu117"}
torchvision = {version = "0.14.1", source = "torch_cu117"}
torch-tb-profiler = "^0.4.1"
faiss-cpu = "^1.7.4"
prdc = "^0.2"
pytorch-fid = "^0.3.0"
python-json-logger = "^2.0.7"
multiprocess = ">=0.70.12"
pyyaml = "^6.0.1"
timm = "^0.9.5"
rich = "^13.5.2"
gdown = "^4.7.1"
dreamsim = "^0.1.3"

[tool.poetry.group.dev.dependencies]
ipython = "<8.12.1"
pysen = {extras = ["lint"], version = "^0.10.4"}
ipykernel = "^6.23.3"
pytest = "^7.4.0"


[[tool.poetry.source]]
name = "torch_cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py39"

[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

[tool.pytest.ini_options]
testpaths = ["test"]
